--- a/ProjectSourceCode/styles.css
+++ b/ProjectSourceCode/styles.css
@@ -489,3 +489,14 @@ th {
   border-color: #f5c6cb;
   color: #721c24;
 }
+
+.search-bar {
+    max-width: 100%;
+    height: 40px;
+    padding-left: 18px;
+    padding-right: 18px;
+    border: 1.5px solid #cccccc;
+    border-radius: 50px; 
+    box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+}
+
