--- a/ProjectSourceCode/styles.css
+++ b/ProjectSourceCode/styles.css
@@ -500,3 +500,16 @@ th {
     box-shadow: 0 1px 3px rgba(0,0,0,0.08);
 }
 
+.search-type {
+    margin-top: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
+    padding-top: 0rem;
+    padding-bottom: 0.5rem;
+}
+
+.search-type .btn {
+  padding: 0.25rem 0.6rem;
+  font-size: 0.75rem;
+}
